package comm;

option java_generic_services = true;

//////////////////////////////////////////////////////////////////////////////
//                                 Messages
//////////////////////////////////////////////////////////////////////////////

enum JobType {
    /** Send a command to return after a specified interval */
    TIMED_JOB = 1;
}

/** Request from client -> centralized server */
message ClientRequest {
    optional JobType t = 1;
    optional int32 jobID = 2;
    optional int64 sendTime = 3;
}

/** Response from centralized server -> client */
message ClientResponse {
    optional int32 jobID = 1;
    optional int64 responseDispatchTime = 2;
}

/** Request from centralized balancer server -> worker node */
message BalancerRequest {
    optional JobType t = 1;
    optional int32 jobID = 2;
    optional int64 sendTime = 3;
}


/** Response from worker node -> centralized balancer server */
message BalancerResponse {
    optional JobType t = 1;
    optional int32 jobID = 2;
    optional int64 responseDispatchTime = 3;
}

//////////////////////////////////////////////////////////////////////////////
//                                 Services
//////////////////////////////////////////////////////////////////////////////

service LoadBalancerServer {
    /** Issue a request to the centralized load balancer */
    rpc makeRequest(ClientRequest) returns (ClientResponse);
}